<resources>
    <string name="app_name">LO52 TP4</string>
    <string name="placeholder">Placeholder</string>
    <string name="default_text">Def</string>
    <string name="btn_up">UP</string>
    <string name="btn_down">DOWN</string>
    <string name="btn_left">LEFT</string>
    <string name="btn_right">RIGHT</string>
    <string name="btn_read">READ</string>
    <string name="btn_write">WRITE</string>
    <string name="invalid_number">Nombre invalide</string>
    <string name="number_out_of_range">Le nombre doît être compris entre 0 et 10</string>
</resources>
